fixed overflow and height issue in moviecard

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ body{
     }
   }
   .Header_UserFunction{
-    margin-right: 110px;
+    margin-right: 120px;
   }
 
   /* ---------------SignUp--------------- */
@@ -137,8 +137,11 @@ body{
   .Card_Title_nav{
     width: 97%;
   }
-  .Card_navigation{
+  .Movie_card_MovieTitle{
     font-size: .9rem;
+  }
+  .Card_navigation{
+    font-size: .8rem;
     margin-left: -20px;
     span{
       font-size: .9rem;
@@ -167,7 +170,7 @@ body{
     width: 60%;
   }
 
-  /* ---------------Movie Item--------------- */
+  /* ---------------Movie--------------- */
   .MovieItem{
     width: 100vw;
     overflow-x: hidden;
@@ -176,18 +179,23 @@ body{
     display: block;
     height: max-content;
   }
+  .MoiveItem_Banner{
+    height: max-content;
+    margin-bottom: 20px;
+  }
   .MoiveItem_Image_Container{
     width: 95vw;
     height: 30vh;
-    margin: 30% auto 10px auto;
+    margin: 20% auto 10px auto;
 
     img{
       width: 100%;
-      height: 1005;
+      height: 100%;
     }
   }
   .Movie_Banner_Content{
     width: 95vw;
+    margin: 0px auto;
 
     .Movie_Banner_Content_title{
       font-size: 1.5rem;
@@ -195,6 +203,8 @@ body{
     .Movie_Banner_Content_description{
       font-size: .9rem;
       margin-top: 5px;
+      width: 100%;
+      text-align: justify;
     }
     .Movie_Banner_Content_release{
       font-size: .9rem;
